third_party/move/move-compiler-v2/tests/more-v1/parser/function_type_extra_comma.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/function_type_extra_comma.move:2:12
  │
2 │     fun fn<,T>() { } // Test a comma before the first type parameter
  │            ^ Expected a type parameter
